Add tablet footer styles

--- a/index.html
+++ b/index.html
@@ -179,22 +179,23 @@
       </section>
     </main>
     <footer class="section footer">
-      <section class="footer__section">
-        <h1 class="footer__logo text text_typography">Cakes</h1>
-        <nav class="footer__navigation navigation">
-          <ul class="footer__list">
-            <li class="navigation__item"><a class="navigation__link footer__link" href="#assortment">Наши торты</a></li>
-            <li class="navigation__item"><a class="navigation__link footer__link" href="#order">Как заказать</a></li>
-            <li class="navigation__item"><a class="navigation__link footer__link" href="#contacts">Контакты</a></li>
-          </ul>
-        </nav>
+      <h1 class="footer__logo text text_typography">Cakes</h1>
+      <nav class="footer__navigation navigation">
+        <ul class="footer__list">
+          <li class="navigation__item"><a class="navigation__link footer__link" href="#assortment">Наши торты</a></li>
+          <li class="navigation__item"><a class="navigation__link footer__link" href="#order">Как заказать</a></li>
+          <li class="navigation__item"><a class="navigation__link footer__link" href="#contacts">Контакты</a></li>
+        </ul>
+      </nav> 
+      <div class="footer__social-network">
         <a class="footer__social-network-button" href="https://instagram.com" target="_blank">
           <span class="footer__social-network-button-icon icon icon-instagram"></span>
         </a>
         <a class="footer__social-network-button" href="https://vk.com" target="_blank">
           <span class="footer__social-network-button-icon icon icon-vk"></span>
         </a>
-      </section>
+      </div>
+      <hr class="footer__divider">
       <span class="footer__copyright">@ 2020 Cakes</span>
     </footer>
   </body>
