Fix ui for tablet

--- a/index.html
+++ b/index.html
@@ -182,11 +182,17 @@
       <h1 class="footer__logo text text_typography">Cakes</h1>
       <nav class="footer__navigation navigation">
         <ul class="footer__list">
-          <li class="navigation__item"><a class="navigation__link footer__link" href="#assortment">Наши торты</a></li>
-          <li class="navigation__item"><a class="navigation__link footer__link" href="#order">Как заказать</a></li>
-          <li class="navigation__item"><a class="navigation__link footer__link" href="#contacts">Контакты</a></li>
+          <li class="navigation__item footer__navigation-item">
+            <a class="navigation__link footer__link" href="#assortment">Наши торты</a>
+          </li>
+          <li class="navigation__item footer__navigation-item">
+            <a class="navigation__link footer__link" href="#order">Как заказать</a>
+          </li>
+          <li class="navigation__item footer__navigation-item">
+            <a class="navigation__link footer__link" href="#contacts">Контакты</a>
+          </li>
         </ul>
-      </nav> 
+      </nav>
       <div class="footer__social-network">
         <a class="footer__social-network-button" href="https://instagram.com" target="_blank">
           <span class="footer__social-network-button-icon icon icon-instagram"></span>
@@ -195,7 +201,7 @@
           <span class="footer__social-network-button-icon icon icon-vk"></span>
         </a>
       </div>
-      <hr class="footer__divider">
+      <hr class="footer__divider" />
       <span class="footer__copyright">@ 2020 Cakes</span>
     </footer>
   </body>
