Fix section background

--- a/index.html
+++ b/index.html
@@ -53,61 +53,60 @@
       <section class="section section_centered assortment" id="assortment">
         <h3 class="section-title text text_typography assortment__title">Наши торты</h3>
         <div class="assortment__grid">
-          <div
-            class="assortment__grid-item assortment__grid-classic"
-            style="background-image: url(./images/desktop/img5.png)"
-          >
+          <div class="assortment__grid-item">
+            <div class="assortment__image-wrapper">
+              <img class="assortment__image" src="images/desktop/classic-cake.png" alt="classic cakes" />
+            </div>
             <h5 class="assortment__type">Классические</h5>
             <h6 class="assortment__count-of-type">24 вида</h6>
-
             <button class="button-link assortment__more-button">
               Смотреть<span class="icon icon-arrow-right2 assortment__more-icon"></span>
             </button>
           </div>
-          <div
-            class="assortment__grid-item assortment__grid-muss"
-            style="background-image: url(./images/desktop/img7.png)"
-          >
+          <div class="assortment__grid-item">
+            <div class="assortment__image-wrapper">
+              <img class="assortment__image" src="images/desktop/muss-cake.png" alt="muss cake" />
+            </div>
             <h5 class="assortment__type">Муссовые</h5>
             <h6 class="assortment__count-of-type">12 видов</h6>
             <button class="button-link assortment__more-button">
               <span class="icon icon-arrow-right2 assortment__more-icon"></span>
             </button>
           </div>
-          <div
-            class="assortment__grid-item assortment__grid-wedding"
-            style="background-image: url(./images/desktop/img10.png)"
-          >
+          <div class="assortment__grid-item">
+            <div class="assortment__image-wrapper">
+              <img class="assortment__image" src="images/desktop/wedding-cake.png" alt="cakes for wedding" />
+            </div>
             <h5 class="assortment__type">Свадебные</h5>
             <h6 class="assortment__count-of-type">20 видов</h6>
             <button class="button-link assortment__more-button">
               <span class="icon icon-arrow-right2 assortment__more-icon"></span>
             </button>
           </div>
-          <div
-            class="assortment__grid-item assortment__grid-kids"
-            style="background-image: url(./images/desktop/img15.png)"
-          >
-            <h5 class="assortment__type">Детские</h5>
-            <h6 class="assortment__count-of-type">18 видов</h6>
-            <button class="button-link assortment__more-button">
-              <span class="icon icon-arrow-right2 assortment__more-icon"></span>
-            </button>
-          </div>
-          <div
-            class="assortment__grid-item assortment__grid-men"
-            style="background-image: url(./images/desktop/img13.png)"
-          >
+          <div class="assortment__grid-item">
+            <div class="assortment__image-wrapper">
+              <img class="assortment__image" src="images/desktop/men-cake.png" alt="cakes for men" />
+            </div>
             <h5 class="assortment__type">Мужчинам</h5>
             <h6 class="assortment__count-of-type">12 видов</h6>
             <button class="button-link assortment__more-button">
               <span class="icon icon-arrow-right2 assortment__more-icon"></span>
             </button>
           </div>
-          <div
-            class="assortment__grid-item assortment__grid-women"
-            style="background-image: url(./images/desktop/img17.png)"
-          >
+          <div class="assortment__grid-item">
+            <div class="assortment__image-wrapper">
+              <img class="assortment__image" src="images/desktop/kids-cake.png" alt="cakes for kids" />
+            </div>
+            <h5 class="assortment__type">Детские</h5>
+            <h6 class="assortment__count-of-type">18 видов</h6>
+            <button class="button-link assortment__more-button">
+              <span class="icon icon-arrow-right2 assortment__more-icon"></span>
+            </button>
+          </div>
+          <div class="assortment__grid-item">
+            <div class="assortment__image-wrapper">
+              <img class="assortment__image" src="images/desktop/women-cake.png" alt="cakes for women" />
+            </div>
             <h5 class="assortment__type">Женщинам</h5>
             <h6 class="assortment__count-of-type">16 видов</h6>
             <button class="button-link assortment__more-button">
@@ -116,6 +115,7 @@
           </div>
         </div>
       </section>
+
       <section class="section order" id="order">
         <div class="order__content-wrapper">
           <h3 class="order__header text text_typography">Как заказать</h3>
