Fix small issues

--- a/index.html
+++ b/index.html
@@ -190,6 +190,9 @@
           <li class="navigation__item footer__navigation-item">
             <a class="navigation__link footer__link" href="#contacts">Контакты</a>
           </li>
+          <li class="navigation__item footer__navigation-item">
+            <a class="navigation__link footer__link" href="tel:+79068999296">+7 906 899 92 96</a>
+          </li>
         </ul>
       </nav>
       <div class="footer__social-network">
