--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <a class="header__phone-number" href="tel:+79068999296">+7 906 899 92 96</a>
     </header>
     <main class="main">
-      <section class="choose-cake">
+      <section class="section choose-cake">
         <div class="choose-cake__wrapper">
           <h3 class="choose-cake__header text text_typography">Торты на заказ</h3>
           <h4 class="choose-cake__subheader text text_handwritten text_dark">Ручная работа</h4>
@@ -50,7 +50,7 @@
           </div>
         </div>
       </section>
-      <section class="section section_centered assortment" id="assortment">
+      <section class="section assortment" id="assortment">
         <h3 class="section-title text text_typography assortment__title">Наши торты</h3>
         <div class="assortment__grid">
           <div class="assortment__grid-item">
@@ -117,7 +117,7 @@
       </section>
       <section class="section order" id="order">
         <div class="order__content-wrapper">
-          <h3 class="order__header text text_typography">Как заказать</h3>
+          <h3 class="section-title order__header text text_typography">Как заказать</h3>
           <div class="order__instruction">
             <span class="order__instruction-step text text_typography">1</span>
             <p class="order__instruction-content">
@@ -146,7 +146,7 @@
         </div>
       </section>
       <section class="section contacts" id="contacts">
-        <h3 class="contacts__header text text_typography">Контакты</h3>
+        <h3 class="section-title contacts__header text text_typography">Контакты</h3>
         <h4 class="contacts__subheader text text_handwritten">Остались вопросы?</h4>
         <div class="contacts__wrapper">
           <div class="contacts__feedback">
