Fix logo behavior

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header class="header container">
       <div class="content header__content">
-        <h1 class="header__logo">Cakes</h1>
+        <a class="header__logo" href="#">Cakes</a>
         <input type="checkbox" class="header__navigation-toggle navigation-toggle" id="navigation-toggle" />
         <nav class="header__navigation navigation">
           <ul class="header__list">
@@ -185,7 +185,7 @@
     </main>
     <footer class="section container footer">
       <div class="content footer__content">
-        <h1 class="footer__logo text text_typography">Cakes</h1>
+        <a class="footer__logo text text_typography" href="#">Cakes</a>
         <nav class="footer__navigation navigation">
           <ul class="footer__list">
             <li class="navigation__item footer__navigation-item">
