Fix bounds for tablet

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           <h4 class="contacts__subheader text text_handwritten">Остались вопросы?</h4>
           <div class="contacts__wrapper">
             <div class="contacts__feedback">
-              <p class="contacts__text">Заполните форму ниже и наш кондитер свяжется с Вами</p>
+              <p class="contacts__text contacts__feedback-text">Заполните форму ниже и наш кондитер свяжется с Вами</p>
               <form class="contacts__form">
                 <input class="contacts__form-input" type="text" placeholder="Ваше имя" />
                 <input class="contacts__form-input" type="email" placeholder="Email адрес" />
@@ -175,7 +175,7 @@
               <p class="contacts__text">
                 Наша почта: <a class="contacts__link" href="mailto:bakerybypavel@mail.ru">bakerybypavel@mail.ru</a>
               </p>
-              <p class="contacts__text">Мы в соц. сетях:</p>
+              <p class="contacts__text contacts__social-network-text">Мы в соц. сетях:</p>
               <a class="contacts__social-network-button" href="https://instagram.com" target="_blank">
                 <span class="contacts__social-network-button-icon icon icon-instagram"></span>
               </a>
