Fix mobile bounds

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </div>
             <div class="assortment__grid-item">
               <div class="assortment__image-wrapper">
-                <img class="assortment__image" src="images/desktop/kids-cake.png" alt="cakes for kids" />
+                <img class="assortment__image" src="images/desktop/cakes-for-children.jpg" alt="cakes for kids" />
               </div>
               <h5 class="assortment__type">Детские</h5>
               <h6 class="assortment__count-of-type">18 видов</h6>
@@ -168,14 +168,14 @@
               </form>
             </div>
             <div class="contacts__network">
-              <p class="contacts__text">
+              <p class="contacts__text contacts__network-text">
                 Или позвоните по телефону:
                 <a class="contacts__link contacts__phone" href="tel:+79068999296">+7 906 899 92 96</a>
               </p>
-              <p class="contacts__text">
+              <p class="contacts__text contacts__network-text">
                 Наша почта: <a class="contacts__link" href="mailto:bakerybypavel@mail.ru">bakerybypavel@mail.ru</a>
               </p>
-              <p class="contacts__text contacts__social-network-text">Мы в соц. сетях:</p>
+              <p class="contacts__text contacts__network-text contacts__social-network-text">Мы в соц. сетях:</p>
               <a class="contacts__social-network-button" href="https://instagram.com" target="_blank">
                 <span class="contacts__social-network-button-icon icon icon-instagram"></span>
               </a>
