Add states for interactive elements

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </li>
           </ul>
         </nav>
-        <label for="navigation-toggle" class="header__navigation-toggle-label">
+        <label tabindex="0" for="navigation-toggle" class="header__navigation-toggle-label">
           <span class="icon icon-menu"></span>
         </label>
         <a class="header__phone-number" href="tel:+79068999296">+7 906 899 92 96</a>
