Fix background for all devices

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </header>
     <main class="main">
       <section class="section container choose-cake">
-        <div class="choose-cake__wrapper content">
+        <div class="content choose-cake__wrapper">
           <h3 class="choose-cake__header text text_typography">Торты на заказ</h3>
           <h4 class="choose-cake__subheader text text_handwritten text_dark">Ручная работа</h4>
           <a class="choose-cake__button button" href="#assortment">Выбрать торт</a>
