--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <div class="assortment__grid">
             <div class="assortment__grid-item">
               <div class="assortment__image-wrapper">
-                <img class="assortment__image" src="images/desktop/classic-cake.png" alt="classic cakes" />
+                <img class="assortment__image" src="images/desktop/classic-cake.jpg" alt="classic cakes" />
               </div>
               <h5 class="assortment__type">Классические</h5>
               <h6 class="assortment__count-of-type">24 вида</h6>
@@ -68,7 +68,7 @@
             </div>
             <div class="assortment__grid-item">
               <div class="assortment__image-wrapper">
-                <img class="assortment__image" src="images/desktop/muss-cake.png" alt="muss cake" />
+                <img class="assortment__image" src="images/desktop/muss-cake.jpg" alt="muss cake" />
               </div>
               <h5 class="assortment__type">Муссовые</h5>
               <h6 class="assortment__count-of-type">12 видов</h6>
@@ -78,7 +78,7 @@
             </div>
             <div class="assortment__grid-item">
               <div class="assortment__image-wrapper">
-                <img class="assortment__image" src="images/desktop/wedding-cake.png" alt="cakes for wedding" />
+                <img class="assortment__image" src="images/desktop/wedding-cake.jpg" alt="cakes for wedding" />
               </div>
               <h5 class="assortment__type">Свадебные</h5>
               <h6 class="assortment__count-of-type">20 видов</h6>
@@ -88,7 +88,7 @@
             </div>
             <div class="assortment__grid-item">
               <div class="assortment__image-wrapper">
-                <img class="assortment__image" src="images/desktop/men-cake.png" alt="cakes for men" />
+                <img class="assortment__image" src="images/desktop/men-cake.jpg" alt="cakes for men" />
               </div>
               <h5 class="assortment__type">Мужчинам</h5>
               <h6 class="assortment__count-of-type">12 видов</h6>
@@ -108,7 +108,7 @@
             </div>
             <div class="assortment__grid-item">
               <div class="assortment__image-wrapper">
-                <img class="assortment__image" src="images/desktop/women-cake.png" alt="cakes for women" />
+                <img class="assortment__image" src="images/desktop/women-cake.jpg" alt="cakes for women" />
               </div>
               <h5 class="assortment__type">Женщинам</h5>
               <h6 class="assortment__count-of-type">16 видов</h6>
