Fix navigation bar

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a class="header__logo" href="#">Cakes</a>
         <input type="checkbox" class="header__navigation-toggle navigation-toggle" id="navigation-toggle" />
         <nav class="header__navigation navigation">
-          <ul class="header__list">
+          <ul class="content header__list">
             <li class="header__navigation-item navigation__item">
               <a class="navigation__link header__link" href="#assortment">Наши торты</a>
             </li>
