--- a/index.html
+++ b/index.html
@@ -121,35 +121,32 @@
       </section>
       <section class="section container order" id="order">
         <div class="content">
-          <div class="order__content-wrapper">
+          <div class="order__content">
             <h3 class="section-title order__header text text_typography">Как заказать</h3>
-            <div class="order__instruction">
-              <span class="order__instruction-step text text_typography">1</span>
-              <p class="order__instruction-content">
-                <span class="order__instruction-header">Срок заказа</span>
-                <span class="order__instruction-info">
-                  Размещать заказы желательно за 2-3 дня. На выходные заказы лучше размещать минимум за неделю.
-                </span>
-              </p>
-            </div>
-            <div class="order__instruction">
-              <span class="order__instruction-step text text_typography">2</span>
-              <p class="order__instruction-content">
-                <span class="order__instruction-header">Доставка по городу</span>
-                <span class="order__instruction-info">
-                  Доставка в пределах города 200 рублей, при заказе на сумму более 2000 доставка бесплатно.
-                </span>
-              </p>
-            </div>
-            <div class="order__instruction">
-              <span class="order__instruction-step text text_typography">3</span>
-              <p class="order__instruction-content">
-                <span class="order__instruction-header">Доставка за городом</span>
-                <span class="order__instruction-info">
-                  Доставка за пределами города рассчитывается индивидуально.
-                </span>
-              </p>
-            </div>
+            <ol class="instructions-list">
+              <li class="instructions-list__item">
+                <p class="instruction">
+                  <span class="instruction__header">Срок заказа</span>
+                  <span class="instruction__info">
+                    Размещать заказы желательно за 2-3 дня. На выходные заказы лучше размещать минимум за неделю.
+                  </span>
+                </p>
+              </li>
+              <li class="instructions-list__item">
+                <p class="instruction">
+                  <span class="instruction__header">Доставка по городу</span>
+                  <span class="instruction__info">
+                    Доставка в пределах города 200 рублей, при заказе на сумму более 2000 доставка бесплатно.
+                  </span>
+                </p>
+              </li>
+              <li class="instructions-list__item">
+                <p class="instruction">
+                  <span class="instruction__header">Доставка за городом</span>
+                  <span class="instruction__info"> Доставка за пределами города рассчитывается индивидуально. </span>
+                </p>
+              </li>
+            </ol>
           </div>
         </div>
       </section>
