--- a/index.html
+++ b/index.html
@@ -13,24 +13,30 @@
   <body>
     <header class="header container">
       <div class="content header__content">
-        <a class="header__logo" href="#">Cakes</a>
-        <input type="checkbox" class="header__navigation-toggle navigation-toggle" id="navigation-toggle" />
-        <nav class="header__navigation navigation">
-          <ul class="content header__list">
-            <li class="header__navigation-item navigation__item">
-              <a class="navigation__link header__link" href="#assortment">Наши торты</a>
-            </li>
-            <li class="header__navigation-item navigation__item">
-              <a class="navigation__link header__link" href="#order">Как заказать</a>
-            </li>
-            <li class="header__navigation-item navigation__item">
-              <a class="navigation__link header__link" href="#contacts">Контакты</a>
-            </li>
-          </ul>
+        <a class="logo header__logo" href="#">Cakes</a>
+        <nav class="collapsable-navigation header__navigation">
+          <label for="navigation-toggle" tabindex="0" class="collapsable-navigation__toggle-label">
+            <span class="icon icon-menu"></span>
+          </label>
+          <input
+            type="checkbox"
+            class="collapsable-navigation__toggle-input navigation-toggle"
+            id="navigation-toggle"
+          />
+          <div class="collapsable-navigation__nav">
+            <ul class="navigation content collapsable-navigation__nav-inner">
+              <li class="navigation__item collapsable-navigation__nav-item">
+                <a class="navigation__link collapsable-navigation__nav-link" href="#assortment">Наши торты</a>
+              </li>
+              <li class="navigation__item collapsable-navigation__nav-item">
+                <a class="navigation__link collapsable-navigation__nav-link" href="#order">Как заказать</a>
+              </li>
+              <li class="navigation__item collapsable-navigation__nav-item">
+                <a class="navigation__link collapsable-navigation__nav-link" href="#contacts">Контакты</a>
+              </li>
+            </ul>
+          </div>
         </nav>
-        <label for="navigation-toggle" class="header__navigation-toggle-label">
-          <span class="icon icon-menu"></span>
-        </label>
         <a class="header__phone-number" href="tel:+79068999296">+7 906 899 92 96</a>
       </div>
     </header>
@@ -187,8 +193,8 @@
     <footer class="section container footer">
       <div class="content footer__content">
         <a class="footer__logo text text_typography" href="#">Cakes</a>
-        <nav class="footer__navigation navigation">
-          <ul class="footer__list">
+        <nav class="footer__navigation">
+          <ul class="navigation footer__list">
             <li class="navigation__item footer__navigation-item">
               <a class="navigation__link footer__link" href="#assortment">Наши торты</a>
             </li>
